--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <title>website</title>
 </head>
 <body>
+  <H1>welcome to my website</H1>
   <p>hello Mr. J</p>
+  <br>
+  <p>hello class</p>
+  <br>
+  <p>how are you?</p>
 </body>
 </html>
