--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <p>how are you?</p>
   <br>
   <p>slack me if you read this</p>
-  <BR>
-  ![alt text](https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjUxsf98IbWAhVri1QKHbNqCdcQjRwIBw&url=https%3A%2F%2Fwww.animalkingdomaz.com%2Fen%2Fgolden-retriever%2F&psig=AFQjCNECyuv16pEM7LOfEwduWlMdItkcOg&ust=1504454754907542 "puppy") 
-</body>
+  ![alt text](https://i.ytimg.com/vi/2EfHtzauHcM/maxresdefault.jpg)
+  </body>
 </html>
