--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p>how are you?</p>
   <br>
   <p>slack me if you read this</p>
-  https://i.ytimg.com/vi/2EfHtzauHcM/maxresdefault.jpg
+  Puppy: 
+![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
   </body>
 </html>
