--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <br>
   <p>slack me if you read this</p>
   Puppy: 
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
+![alt text](https://i.ytimg.com/vi/2EfHtzauHcM/maxresdefault.jpg "Logo Title Text 1")
   </body>
 </html>
