--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <p>how are you?</p>
   <br>
   <p>slack me if you read this</p>
+  ! [Image of Yaktocat]
+  (https://octodex.github.com/images/yaktocat.png)
   </body>
 </html>
