--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <p>how are you?</p>
   <br>
   <p>slack me if you read this</p>
-  ![Image of Yaktocat]
-  (https://octodex.github.com/images/yaktocat.png)
+  If you want to embed images, this is how you do it:
+
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
   </body>
 </html>
