--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <p>hello class</p>
   <br>
   <p>how are you?</p>
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
 <h2>Spectacular Mountain</h2>
 <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 
+</body>
+</html>
 </body>
 </html>
   <br>
