--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>website</title>
+  <title>Lward1's first website</title>
 </head>
 <body>
   <H1>welcome to my website</H1>
