--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@ function checkTime(i) {
 <body onload="startTime()">
 
 <div id="txt"></div>
+  
+  <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+
+<h1>My Dashboard</h1>
+  h1 { 
+  color: #00f000;
+  font-family: 'Rye', cursive;
+  font-size: 32pt;
+}
 
 </body>
 </html>
