--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <body>
   <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
   <H1>welcome to my website</H1>
-<style></style>
-  h1 { 
+<style> h1 { 
   color: #00f000;
   font-family: 'Rye', cursive;
   font-size: 32pt;
-}
+}</style>
+ 
   <p>hello Mr. J</p>
   <br>
   <p>hello class</p>
