--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <H1>welcome to my website</H1>
 <style> h1 { 
   color: #0000f0;
-  font-family: 'Rye', cursive;
-  font-size: 28pt;
+  font-family: 'Modak', cursive;font-size: 28pt;
 }</style>
  
   <p>hello Mr. J</p>
