--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <title>Lward1's first website</title>
 </head>
 <body>
-  <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest Guy" rel="stylesheet">
   <H1>welcome to my website</H1>
 <style> h1 { 
   color: #0000f0;
-  font-family: 'Modak', cursive;font-size: 28pt;
+  font-family: 'Luckiest Guy', cursive;font-size: 28pt;
 }</style>
  
   <p>hello Mr. J</p>
