--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Luckiest Guy" rel="stylesheet">
   <H1>welcome to my website</H1>
 <style> h1 { 
-  color: #7070b0;
+  color: #d050d0;
   font-family: 'Luckiest Guy', cursive;font-size: 28pt;
 }</style>
  
