--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function checkTime(i) {
 <img src="https://i.ytimg.com/vi/3Xc5aMF96xg/maxresdefault.jpg" alt="Mountain View" style="width:704px;height:364.5px;">
   <P>here's a video</P>
 <video width="320" height="240" controls>
-  <source src="<iframe width="854" height="480" src="https://www.youtube.com/embed/QZv70PG9eXM?ecver=1.mp4" frameborder="0" gesture="media" allowfullscreen></iframe>" type="video/mp4">
+  <source src="<iframe width="854" height="480" src="https://www.youtube.com/embed/QZv70PG9eXM?ecver=1" frameborder="0" gesture="media" allowfullscreen></iframe>" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
