--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@ function checkTime(i) {
 <video width="320" height="240" controls>
   <source src="movie.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
-  Your browser does not support the video tag.
-</video>
-
+<script>window.googleJavaScriptRedirect=1</script><META name="referrer" content="origin"><script>var n={navigateTo:function(b,a,d){if(b!=a&&b.google){if(b.google.r){b.google.r=0;b.location.href=d;a.location.replace("about:blank");}}else{a.location.replace(d);}}};n.navigateTo(window.parent,window,"https://www.youtube.com/watch?v\x3da6KGPBflhiM");
+</script><noscript><META http-equiv="refresh" content="0;URL='https://www.youtube.com/watch?v=a6KGPBflhiM'"></noscript>
 </body>
 </html>
   </head>
