--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@ function checkTime(i) {
 <img src="https://i.ytimg.com/vi/3Xc5aMF96xg/maxresdefault.jpg" alt="Mountain View" style="width:704px;height:364.5px;">
 <img src="https://media.giphy.com/media/bmrxNoGqGNMAM/giphy.gif" alt="Mountain View" style="width:300px;height:225px;">
   <P>here's a video</P>
-<!DOCTYPE html>
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=a6KGPBflhiMs">
+</iframe>
+Try it Yourself »
+
 <html>
 <body>
 
