--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function checkTime(i) {
 <img src="https://media.giphy.com/media/bmrxNoGqGNMAM/giphy.gif" alt="Mountain View" style="width:300px;height:225px;">
   <P>here's a video</P>
 <iframe width="420" height="315"
-src="https://www.youtube.com/embed/XGSy3_Czz8k">
+src="https://www.youtube.com/watch?v=a6KGPBflhiM">
 </iframe>
 <html>
 <body>
