--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ function checkTime(i) {
 <img src="https://i.ytimg.com/vi/3Xc5aMF96xg/maxresdefault.jpg" alt="Mountain View" style="width:704px;height:364.5px;">
 <img src="https://media.giphy.com/media/bmrxNoGqGNMAM/giphy.gif" alt="Mountain View" style="width:300px;height:225px;">
   <P>here's a video (coming soon!)</P>
+  <video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
 </iframe>
 <html>
 <body>
